[package]
name = "tokenizer-lib"
description = "Tokenization utilities for building parsers in Rust"
version = "1.4.0"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "tokenization", "utils"]
categories = ["parsing"]
repository = "https://github.com/kaleidawave/tokenizer-lib"
