[package]
name = "tokenizer-lib"
description = "Tokenization utilities for building parsers in Rust"
version = "1.5.0"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "tokenization", "utils"]
categories = ["parsing"]
repository = "https://github.com/kaleidawave/tokenizer-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "buffered", "generator"]
parallel = []
buffered = []
generator = []
