[package]
name = "tokenizer-lib"
description = "Tokenization utilities for building parsers in Rust"
version = "1.6.0"
authors = ["Ben <kaleidawave@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "tokenization", "utils"]
categories = ["parsing"]
repository = "https://github.com/kaleidawave/tokenizer-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[features]
default = ["parallel", "buffered", "generator"]
parallel = []
buffered = []
generator = []

# Includes some features for tokens with a width
sized-tokens = ["source-map"]

[dependencies]
source-map = { version = "0", optional = true }
